<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context="com.kios.rosDJI.ui.ConnectDroneActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stream_rtmp_url"
            android:padding="5dp"
            android:textSize="15sp"
            />
        <EditText
            android:id="@+id/streamUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/streamURL"
            android:textSize="15sp"
            android:layout_below="@id/dialog_title"
            />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
android:orientation="horizontal"
        android:weightSum="3">
        <!--<Button-->
        <!--android:id="@+id/oldStream_btn"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="old stream"-->
        <!--android:gravity="center"-->
        <!--android:layout_weight="1"/>-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Resolution:"
            ></TextView>

        <Spinner
            android:id="@+id/resolution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/youtube"
           />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bit rate:"
            ></TextView>

        <Spinner

            android:id="@+id/speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/youtube"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">
        <!--<Button-->
            <!--android:id="@+id/oldStream_btn"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="old stream"-->
            <!--android:gravity="center"-->
            <!--android:layout_weight="1"/>-->
        <Button
            android:id="@+id/streamdialog_negative_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/youtube"
            android:layout_weight="1"
            android:visibility="gone"/>
        <Button
            android:id="@+id/streamdialog_positive_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_stream"
            android:layout_weight="2"/>
    </LinearLayout>

</LinearLayout>